--- a/templates/home.html
+++ b/templates/home.html
@@ -2,49 +2,27 @@
 <html>
 <head>
   <title> Careers </title>
-  <style>
-    h1{
-        font-family: Roboto;
-        text-align: center;
-        color: rgb(180, 180, 100)
-      }
-      h2{
-        font-family: Roboto;
-        color: rgb(180, 180, 100)
-        text-align: center;
-      
-      }
-    
-      .bodytext {
-        font-family: rosybrown; 
-        text-align: center; 
-        color: rgb(80,90,90)
-      }
-      # banner{
-        width:100%;
-        height:360px;
-        object-fit:cover;
-        
-      }
-      #container{
-        max-width: 720px;
-        margin: 0 auto 0 auto;
-      }
-  </style>
-</head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ </head>
  <body>
-   <div id = "container">
-   <h1> Careers </h1>
-   <img id= "banner" src="http://www.htmldog.com/badge1.gif">
-   <h2>About Careers </h2>
-   <p class = "bodytext">
+  <div class="container">
+   <h1 class= "text-center" mt-2 mb-4> Careers </h1>
+   <img src="http://www.htmldog.com/badge1.gif">
+   <h2 class = "text-center" mt-2 mb-4>About Careers </h2>
+   <p class = "lead">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dignissim cras tincidunt lobortis feugiat vivamus. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Sed viverra tellus in hac habitasse platea dictumst. Purus non enim praesent elementum facilisis leo vel fringilla est.
    </p>
-   <h2>Open Positions </h2>
-  <p> TODO- show the jobs here </p>
-     <div style="text-align:center;">
-   <button> Contact Us </button>
-       <p> copyright 2023 Mike </p>
+   <h2 class = "text-center">Open Positions </h2>
+  <p> 
+    {%for job in jobs%}
+     {%include 'jobitem.html'%}
+    {%endfor%}
+  </p>
+     <div class = "text-center">
+   <button class="btn btn-primary btn-lg"> Contact Us </button>
+       <p class = "mt-4"> copyright 2023 Mike </p>
      </div>
    </div>
  </body> 
