--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
  </head>
  <body>
+   {% include 'nav.html' %}
   <div class="container">
    <h1 class= "text-center" mt-2 mb-4> Careers </h1>
    <img src="http://www.htmldog.com/badge1.gif">
@@ -25,5 +26,6 @@
        <p class = "mt-4"> copyright 2023 Mike </p>
      </div>
    </div>
+   {% include 'footer.html'%}
  </body> 
 </html>
