--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,7 +11,7 @@
         {%endif%}
       </div>
       <div class = "col-2">
-      <button type="button" class="btn btn-secondary"> Apply </button>
+      <a href= "mailto:mikeolutikom@yahoo.com?subject= Application for {{job[title]}}"type="button" class="btn btn-secondary"> Apply </a>
     </div>
 
     </div>
